2003-07-09  Thorsten Jordan <thorsten_jordan@gmx.de>
	* made release 0.0.11 and increased version number to 0.0.12

2003-07-09  Thorsten Jordan <thorsten_jordan@gmx.de>
	* model.cpp
	  - replaced construct that was compiled wrongly by VC++6.
	    Now this win32 bug is fixed.
	    VC6 can't compile "Release" but "Debug" only ("internal
	    compiler error").
	    What a faulty compiler! Anyone wants to try WatcomC++ 11
	    on this? or gcc/win32?

2003-07-07  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - fixed code for new water, removed old water code.

2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
	* game.cpp
	  - end game when contact to enemy is lost

2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
	* game.h game.cpp
	  - first bits of result recording and display, rather experimental.

2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
	* smokestream.cpp
	  - segfault reason found & fixed

2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
	* begun Win32 Port.
	  It compiles, links and runs, BUT:
	  - there is no mouse pointer.
	  - models are not read or drawn right, they look like rotated
	    around their length axis and normal vectors inverted.
	  - many dirty hacks are neccessary to work with Visual C++ 6,
	    most ugly:
	    #define for if(0);else for to avoid VC6 compiler bug.
	    change private: to public: (VC6 ignores friend decl.)
	    Disabled glPaletteEXT (MSDN says "ok", VC6 says "no")
	  - You'll need to alter the SDL paths in the project file.
	  - Possible trash of memory after exit (Win98 crashed 20 seconds
	    later)
	  - Speed seems ok.

2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
	* convoy.cpp game.cpp subsim.cpp
	  - first bits of custom mission generation.

2003-07-05  Thorsten Jordan <thorsten_jordan@gmx.de>
	* ship_corvette.* and related files.
	  - new model.
	* ai.cpp
	  - made destroyer course computation a bit smarter.
	* game.h game.cpp user_interface.cpp
	  - new clouds.