@@ -1,3 +1,10 @@
+2003-07-10  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* gun_shell.h gun_shell.cpp
+	  - new simulation of shot trajectory.
+	  - correct rotation of shell model for display
+	* user_interface.cpp
+	  - display sum of sunken tons
+
 2003-07-09  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* made release 0.0.11 and increased version number to 0.0.12
 
